--- a/ga_planner_app/Gemfile
+++ b/ga_planner_app/Gemfile
@@ -6,6 +6,9 @@ gem 'jquery-rails'
 gem 'haml-rails'
 gem 'cancan'
 gem 'bcrypt-ruby', '~> 3.0.0'
+gem 'rmagick'
+gem 'carrierwave'
+gem 'fog', '~> 1.3.1'
 
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
